--- a/assignments/4. todo/todo/index.html
+++ b/assignments/4. todo/todo/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="./style.css"></script>
-    <title>Todo</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <script src="./main.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOM | TODO APP</title>
+    <link rel="stylesheet" href="assets/stylesheets/style.css">
+    <script src="https://kit.fontawesome.com/f4e5dcf0e0.js" crossorigin="anonymous"></script>
+</head>
+<body>
+
+    <div class="text-centre">
+        <h1>todos</h1>
+        <i class="fas fa-chevron-down"></i>
+        <input type="text" placeholder="What needs to be done?" class="input">
+    </div>
+
+    <div class="text-centre">
+        <ul></ul>
+    </div>
+
+    <footer class="footer">
+        <div class="main_flex ">
+            <span class="itemsLeft">items left</span>
+            <ul class="sub_flex">
+                <li class="all"><a href="#">All</a></li>
+                <li class="active"><a href="#">Active</a></li>
+                <li class="completed"><a href="#">Completed</a></li>
+            </ul>
+            <button class="clear">Clear Completed</button>
+        </div>
+    </footer>
+    
+    <script src="main.js"></script>
+
+</body>
 </html>
